--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.10",
     "expo-image": "~2.0.2",
-    "expo-image-picker": "~16.0.3"
+    "expo-image-picker": "~16.0.3",
+    "react-native-view-shot": "~4.0.3",
+    "expo-media-library": "~17.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
