--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "dom-to-image": "^2.6.0",
     "expo": "^52.0.11",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
+    "expo-image": "~2.0.2",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
+    "expo-media-library": "~17.0.4",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
@@ -33,14 +37,12 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.10",
-    "expo-image": "~2.0.2",
-    "expo-image-picker": "~16.0.3",
     "react-native-view-shot": "~4.0.3",
-    "expo-media-library": "~17.0.4"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/dom-to-image": "^2.6.7",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
